--- a/templates/action_log.html
+++ b/templates/action_log.html
@@ -1,18 +1,11 @@
 {% extends "base.html" %}
 
-{% block sidebar %}
-  <a class="list-group-item" href="/dockerserver/">Docker Server</a>
-  <a class="list-group-item" href="/supervisorserver/">Supervisor Server</a>
-  <a class="list-group-item" href="/jenkinsserver/">Jenkins Server</a>
-  <a class="list-group-item" href="/dirviewer/">Directory Viewer</a>
-  <a class="list-group-item active" href="/actionslog/">Action Log</a>
-  <a class="list-group-item" href="/settings/">Settings</a>
-{% endblock %}
 
 {% block body %}
 
 <ol class="breadcrumb">
-  <li><a href="#">Home</a></li>
+  <li>Home</li>
+  <li>Ops Manage</li>
   <li class="active">Action Log</li>
 </ol>
 
@@ -21,20 +14,41 @@
         Controlled by django
     </h2>
 </div>
-<h2>
-    <small>Action log</small>
-</h2>
 
 <table class="table">
+<caption>
+<form class="form-inline" style="float: right;" action="/actionlog/" method="post">
+ {% csrf_token %}
+  <div class="form-group">
+    <p class="form-control-static">
+        <select class="form-control" name="filter_select">
+          <option>User =</option>
+          <option>Detail</option>
+        </select>
+    </p>
+    <input type="text" class="form-control" name="filter_keyword" placeholder="">
+  </div>
+  <button type="submit" class="btn btn-default">Filter</button>
+  <div class="btn-group">
+  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    More Actions <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu dropdown-menu-right">
+    <li><a href="#">Delete</a></li>
+    <li><a href="#">Other</a></li>
+  </ul>
+</div>
+</form>
+</caption>
     <tr>
         <td colspan="12" data-column="0">
             <span class="table_count">Displaying 10 / {{ action_log_count }} items</span>
         </td>
     </tr>
     <tr class="active">
-        <th width="20%">time</th>
-        <th width="15%">user</thw>
-        <th width="65%">detail</th>
+        <th width="20%">Time</th>
+        <th width="15%">User</thw>
+        <th width="65%">Detail</th>
     </tr>
     {% for log in action_log %}
     <tr>
@@ -54,13 +68,13 @@
   <span style="text-align:center; display:block;">
     <a>
         {% if action_log.has_previous %}
-            <a style="text-decoration:underline; color:inherit;" href="?page={{ action_log.previous_page_number }}">Previous</a>
+            <a style="text-decoration:underline; color:inherit;" href="{{ page_prefix }}{{ action_log.previous_page_number }}">Previous</a>
         {% endif %}
     </a>
     <a style="color:inherit;">&nbsp; < {{ action_log.number }} / {{ action_log.paginator.num_pages }} > &nbsp;</a>
     <a>
         {% if action_log.has_next %}
-            <a style="text-decoration:underline; color:inherit;" href="?page={{ action_log.next_page_number }}">Next</a>
+            <a style="text-decoration:underline; color:inherit;" href="{{ page_prefix }}{{ action_log.next_page_number }}">Next</a>
         {% endif %}
     </a>
   </span>
