--- a/templates/docker_server.html
+++ b/templates/docker_server.html
@@ -12,7 +12,8 @@
 {% block body %}
 
 <ol class="breadcrumb">
-  <li><a href="#">Home</a></li>
+  <li>Home</li>
+  <li>Server Action</li>
   <li class="active">Docker Server</li>
 </ol>
 
