--- a/templates/jenkins_server.html
+++ b/templates/jenkins_server.html
@@ -12,7 +12,8 @@
 {% block body %}
 
 <ol class="breadcrumb">
-  <li><a href="#">Home</a></li>
+  <li>Home</li>
+  <li>Ops Manage</li>
   <li class="active">Jenkins Server</li>
 </ol>
 
