--- a/templates/base.html
+++ b/templates/base.html
@@ -6,10 +6,31 @@
     {% load staticfiles %}
     <link   href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link   href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
+    <link   href="{% static 'css/toastr.min.css' %}" rel="stylesheet">
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/toastr.min.js' %}"></script>
     <script src="{% static 'js/app.js' %}"></script>
     <style type="text/css">body{ font-size:13px;} </style>
+    <script type="text/javascript">         
+     toastr.options = {
+                        "closeButton": false,
+                        "debug": false,
+                        "newestOnTop": false,
+                        "progressBar": false,
+                        "positionClass": "toast-top-right",
+                        "preventDuplicates": false,
+                        "onclick": null,
+                        "showDuration": "300",
+                        "hideDuration": "1000",
+                        "timeOut": "5000",
+                        "extendedTimeOut": "1000",
+                        "showEasing": "swing",
+                        "hideEasing": "linear",
+                        "showMethod": "fadeIn",
+                        "hideMethod": "fadeOut"
+                      }
+    </script>
 </head>
 <body>
 <div class="row"style="margin-left: 0px; margin-right: 0px">
