--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -32,7 +32,8 @@
     </a>
     <ul class="nav panel-collapse collapse" id="collapse-setting">
       <li ><a id="nav-account" style="text-align: right;" href="/account/">Account</a></li>
-      <li ><a id="nav-system" style="text-align: right;" href="/settings/">System</a></li>
+      <li ><a id="nav-system" style="text-align: right;" href="/system/">System</a></li>
+      <li ><a id="nav-serverlist" style="text-align: right;" href="/serverlist/">Server List</a></li>
     </ul>
   </li>
 </ul>
