--- a/templates/docker_server.html
+++ b/templates/docker_server.html
@@ -3,7 +3,6 @@
 {% block body %}
 
 <ol class="breadcrumb">
-  <li>Home</li>
   <li>Server Action</li>
   <li class="active">Docker Server</li>
 </ol>
@@ -28,7 +27,7 @@
     </p>
     <input type="text" class="form-control" name="filter_keyword" placeholder="">
   </div>
-  <button type="submit" class="btn btn-default">Filter</button>
+  <button type="submit" class="btn btn-default"><span class="fa fa-filter"></span> Filter</button>
   <div class="btn-group">
   <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     More Actions <span class="caret"></span>
