--- a/templates/action_log.html
+++ b/templates/action_log.html
@@ -1,10 +1,8 @@
 {% extends "base.html" %}
 
-
 {% block body %}
 
 <ol class="breadcrumb">
-  <li>Home</li>
   <li>Ops Manage</li>
   <li class="active">Action Log</li>
 </ol>
@@ -28,7 +26,7 @@
     </p>
     <input type="text" class="form-control" name="filter_keyword" placeholder="">
   </div>
-  <button type="submit" class="btn btn-default">Filter</button>
+  <button type="submit" class="btn btn-default"><span class="fa fa-filter"></span> Filter</button>
   <div class="btn-group">
   <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     More Actions <span class="caret"></span>
