--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,8 @@
     <script src="{% static 'js/toastr.min.js' %}"></script>
     <script src="{% static 'js/app.js' %}"></script>
     <style type="text/css">body{ font-size:13px;} </style>
+    <style type="text/css">th{vertical-align: middle !important;}</style>
+    <style type="text/css">td{vertical-align: middle !important;}</style>
     <script type="text/javascript">         
      toastr.options = {
                         "closeButton": false,
