--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -18,13 +18,13 @@
       {% csrf_token %}
         <div class="row">
           <div class="col-sm-6 col-md-5">
-              <p><strong>Old password</strong></p>
+              <p><strong>Old password </strong><span class="fa fa-asterisk"></span></p>
               <input type="password" name="old_password" class="form-control" placeholder="" required autofocus>
               </br>
-              <p><strong>New password</strong></p>
+              <p><strong>New password </strong><span class="fa fa-asterisk"></span></p>
               <input type="password" name="new_password" class="form-control" placeholder="" required>
               </br>
-              <p><strong>Confirm new password</strong></p>
+              <p><strong>Confirm new password </strong><span class="fa fa-asterisk"></span></p>
               <input type="password" name="confirm_new_password" class="form-control" placeholder="" required>
               </br>
               {% if message %}
