--- a/templates/users.html
+++ b/templates/users.html
@@ -3,8 +3,8 @@
 {% block body %}
 
 <ol class="breadcrumb">
-  <li>Settings</li>
-  <li class="active">Account</li>
+  <li>Admin</li>
+  <li class="active">Users</li>
 </ol>
 
 <div class="page-header">
@@ -13,56 +13,52 @@
     </h2>
 </div>
 
-
 <table class="table table-hover">
 <caption>
-<form class="form-inline" style="float: right;" action="/supervisorserver/" method="post">
+<form class="form-inline" style="float: right;" action="/users/" method="post">
  {% csrf_token %}
   <div class="form-group">
     <p class="form-control-static">
         <select class="form-control" name="filter_select">
-          <option>User Name</option>
+          <option>User Name =</option>
           <option>Email</option>
+          <option>Superuser</option>
           <option>Description</option>
         </select>
     </p>
     <input type="text" class="form-control" name="filter_keyword" placeholder="">
   </div>
   <button type="submit" class="btn btn-default"><span class="fa fa-filter"></span> Filter</button>
+  <button class="btn btn-default"><a class="fa fa-plus" href="/createuser/"> Create User</a></button>
   <div class="btn-group">
   <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     More Actions <span class="caret"></span>
   </button>
   <ul class="dropdown-menu dropdown-menu-right">
-    <li><a href="#">Edit</a></li>
-    <li><a href="#">Change Password</a></li>
+    <li><a href="#">Delete</a></li>
     <li><a href="#">Other</a></li>
   </ul>
 </div>
 </form>
 </caption>
-
     <tr>
         <td colspan="12" data-column="0">
-            <span class="table_count">Displaying 1 items</span>
+            <span class="table_count">Displaying 10 / {{ user_list_count }} items</span>
         </td>
     </tr>
     <tr class="active">
-        <th><input type="checkbox"></th>
-        <th width="10%">User Name</th>
-        <th width="30%">Email</thw>
-        <th width="20%">Last Login</th>
-        <th width="25%">Description</th>
-        <th colspan="4" width="15%">Actions</th>
+        <th width="15%">User Name</th>
+        <th width="15%">Email</thw>
+        <th width="15%">Superuser</thw>
+        <th width="30%">Description</th>
+        <th width="15%">Action</th>
     </tr>
+    {% for user in user_list %}
     <tr>
-        <td>
-            <input type="checkbox">
-        </td>
-        <td>{{ userinfo.username }}</td>
-        <td>{{ userinfo.email }}</td>
-        <td>{{ userinfo.last_login }}</td>
-        <td>{{ userinfo.description }}</td>
+        <td>{{user.username}}</td>
+        <td>{{user.email}}</td>
+        <td>{{user.is_superuser}}</td>
+        <td>{{user.description}}</td>
         <td>
  
           <!-- Split button -->
@@ -73,16 +69,32 @@
             </button>
             <ul class="dropdown-menu dropdown-menu-right">
               <li><a href="/changepassword/">Change Password</a></li>
+              <li><a style="color: red;" href="/deleteuser/?username={{user.username}}">Delete User</a></li>
             </ul>
           </div>
         </td>
-
     </tr>
+    {% endfor %}
     <tr>
         <td colspan="12" data-column="0">
-            <span class="table_count">Displaying 1 items</span>
+            <span class="table_count">Displaying 10 / {{ user_list_count }} items</span>
         </td>
     </tr>
 </table>
 
+<div>
+  <span style="text-align:center; display:block;">
+    <a>
+        {% if user_list.has_previous %}
+            <a style="text-decoration:underline; color:inherit;" href="{{ page_prefix }}{{ user_list.previous_page_number }}">Previous</a>
+        {% endif %}
+    </a>
+    <a style="color:inherit;">&nbsp; < {{ user_list.number }} / {{ user_list.paginator.num_pages }} > &nbsp;</a>
+    <a>
+        {% if user_list.has_next %}
+            <a style="text-decoration:underline; color:inherit;" href="{{ page_prefix }}{{ user_list.next_page_number }}">Next</a>
+        {% endif %}
+    </a>
+  </span>
+</div>
 {% endblock %}
