--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -21,7 +21,6 @@
     <ul class="nav panel-collapse collapse" id="collapse-ops-manage">
       <li ><a id="nav-jenkinsserver" style="text-align: right;" href="/jenkinsserver/">Jenkins Server</a></li>
       <li ><a id="nav-dirviewer" style="text-align: right;" href="/dirviewer/">Directory Viewer</a></li>
-      <li ><a id="nav-actionlog" style="text-align: right;" href="/actionlog/">Action Log</a></li>
     </ul>
   </li>
 
@@ -32,10 +31,22 @@
     </a>
     <ul class="nav panel-collapse collapse" id="collapse-setting">
       <li ><a id="nav-account" style="text-align: right;" href="/account/">Account</a></li>
-      <li ><a id="nav-system" style="text-align: right;" href="/system/">System</a></li>
-      <li ><a id="nav-serverlist" style="text-align: right;" href="/serverlist/">Server List</a></li>
+      <li ><a id="nav-system" style="text-align: right;" href="/system/">User Setting</a></li>
     </ul>
   </li>
+  {% if request.session.is_superuser == True %}
+  <li>
+    <a data-toggle="collapse" href="#collapse-admin" aria-expanded="false" aria-controls="collapse-admin" style="color: inherit;" >
+            Admin
+        <span class="fa fa-chevron-right pull-right"></span>
+    </a>
+    <ul class="nav panel-collapse collapse" id="collapse-admin">
+      <li ><a id="nav-users" style="text-align: right;" href="/users/">Users</a></li>
+      <li ><a id="nav-serverlist" style="text-align: right;" href="/serverlist/">Server List</a></li>
+      <li ><a id="nav-actionlog" style="text-align: right;" href="/actionlog/">Action Log</a></li>
+    </ul>
+  </li>
+  {% endif %}
 </ul>
 
 </nav>
