--- a/templates/account.html
+++ b/templates/account.html
@@ -72,7 +72,7 @@
               <span class="caret"></span>
             </button>
             <ul class="dropdown-menu dropdown-menu-right">
-              <li><a href="/changepassword/">Change Password</a></li>
+              <li><a href="/changepassword/?username={{userinfo.username}}">Change Password</a></li>
             </ul>
           </div>
         </td>
