--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -18,6 +18,9 @@
       {% csrf_token %}
         <div class="row">
           <div class="col-sm-6 col-md-5">
+              <p><strong>User Name </strong><span class="fa fa-asterisk"></span></p>
+              <input type="text" name="username" class="form-control" readonly="readonly" value={{username}}>
+              </br>
               <p><strong>Old password </strong><span class="fa fa-asterisk"></span></p>
               <input type="password" name="old_password" class="form-control" placeholder="" required autofocus>
               </br>
