--- a/templates/users.html
+++ b/templates/users.html
@@ -68,7 +68,7 @@
               <span class="caret"></span>
             </button>
             <ul class="dropdown-menu dropdown-menu-right">
-              <li><a href="/changepassword/">Change Password</a></li>
+              <li><a href="/changepassword/?username={{user.username}}">Change Password</a></li>
               <li><a style="color: red;" href="/deleteuser/?username={{user.username}}">Delete User</a></li>
             </ul>
           </div>
