--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -8,7 +8,7 @@
 </ol>
 
 <div class="page-header">
-  <h2>Controlled by django</h2>
+  <h2>Change Password</h2>
 </div>
 
 <div class="static_page">
