--- a/templates/server_list.html
+++ b/templates/server_list.html
@@ -36,7 +36,7 @@
   </button>
   <ul class="dropdown-menu dropdown-menu-right">
     <li><a href="#">Edit</a></li>
-    <li><a href="#">Delete</a></li>
+    <li><a style="color: red;" href="#">Delete</a></li>
   </ul>
 </div>
 </form>
