--- a/templates/users.html
+++ b/templates/users.html
@@ -35,7 +35,7 @@
     More Actions <span class="caret"></span>
   </button>
   <ul class="dropdown-menu dropdown-menu-right">
-    <li><a href="#">Delete</a></li>
+    <li><a style="color: red;" href="#">Delete</a></li>
     <li><a href="#">Other</a></li>
   </ul>
 </div>
