--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -20,7 +20,7 @@
     </a>
     <ul class="nav panel-collapse collapse" id="collapse-ops-manage">
       <li ><a id="nav-jenkinsserver" style="text-align: right;" href="/jenkinsserver/">Jenkins Server</a></li>
-      <li ><a id="nav-dirviewer" style="text-align: right;" href="/dirviewer/">Directory Viewer</a></li>
+      <li ><a id="nav-directoryviewer" style="text-align: right;" href="/directoryviewer/">Directory Viewer</a></li>
     </ul>
   </li>
 
