--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,11 @@
     <link   href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link   href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
     <link   href="{% static 'css/toastr.min.css' %}" rel="stylesheet">
+    <link   href="{% static 'css/xterm.min.css' %}" rel="stylesheet">
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/toastr.min.js' %}"></script>
+    <script src="{% static 'js/xterm.min.js' %}"></script>
     <script src="{% static 'js/app.js' %}"></script>
     <style type="text/css">body{ font-size:13px;} </style>
     <style type="text/css">th{vertical-align: middle !important;}</style>
