--- a/templates/users.html
+++ b/templates/users.html
@@ -63,7 +63,7 @@
  
           <!-- Split button -->
           <div class="btn-group">
-            <a type="button" class="btn btn-default btn-sm" href="javascript:void(0);" onclick="#">Edit</a>
+            <a type="button" class="btn btn-default btn-sm" href="javascript:;" onclick="#">Edit</a>
             <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
             </button>
