--- a/templates/docker_server.html
+++ b/templates/docker_server.html
@@ -70,14 +70,15 @@
           
           <!-- Split button -->
           <div class="btn-group">
-            <a type="button" class="btn btn-default btn-sm" href="javascript:void(0);" onclick="container_opt('{{container.host_ip}}','{{container.host_port}}','{{container.id}}','{{container.name}}','restart')">Restart</a>
+            <a type="button" class="btn btn-default btn-sm" href="javascript:;" onclick="container_opt('{{container.host_ip}}','{{container.host_port}}','{{container.id}}','{{container.name}}','restart')">Restart</a>
             <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
             </button>
             <ul class="dropdown-menu dropdown-menu-right">
-              <li><a href="javascript:void(0);" onclick="container_opt('{{container.host_ip}}','{{container.host_port}}','{{container.id}}','{{container.name}}','start')">Start Container</a></li>
-              <li><a href="javascript:void(0);" onclick="container_opt('{{container.host_ip}}','{{container.host_port}}','{{container.id}}','{{container.name}}','stop')">Stop Container</a></li>
+              <li><a href="javascript:;" onclick="container_opt('{{container.host_ip}}','{{container.host_port}}','{{container.id}}','{{container.name}}','start')">Start Container</a></li>
+              <li><a href="javascript:;" onclick="container_opt('{{container.host_ip}}','{{container.host_port}}','{{container.id}}','{{container.name}}','stop')">Stop Container</a></li>
               <li role="separator" class="divider"></li>
+              <li><a href="/containerconsole/?server_ip={{container.host_ip}}&server_port={{container.host_port}}&container_id={{container.id}}&container_name={{container.name}}" target="_blank">Container Console</a></li>
               <li><a href="/tail_container_log/?server_ip={{container.host_ip}}&server_port={{container.host_port}}&container_id={{container.id}}" target="_blank">Tail Log</a></li>
             </ul>
           </div>
