--- a/templates/docker_server.html
+++ b/templates/docker_server.html
@@ -79,7 +79,7 @@
               <li><a href="javascript:;" onclick="container_opt('{{container.host_ip}}','{{container.host_port}}','{{container.id}}','{{container.name}}','stop')">Stop Container</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="/containerconsole/?server_ip={{container.host_ip}}&server_port={{container.host_port}}&container_id={{container.id}}&container_name={{container.name}}" target="_blank">Container Console</a></li>
-              <li><a href="/tail_container_log/?server_ip={{container.host_ip}}&server_port={{container.host_port}}&container_id={{container.id}}" target="_blank">Tail Log</a></li>
+              <li><a href="/tail_container_log/?server_ip={{container.host_ip}}&server_port={{container.host_port}}&container_id={{container.id}}&container_name={{container.name}}" target="_blank">Tail Log</a></li>
             </ul>
           </div>
 
