--- a/templates/tail_log.html
+++ b/templates/tail_log.html
@@ -11,14 +11,14 @@
   <h2>Tail Log</h2>
 </div>
 
-    <script type="text/javascript">//<![CDATA[
+<script type="text/javascript">
  $(function () {
         window.onload=function () {
             if (window.s) {
                 window.s.close()
             }
             /*创建socket连接*/
-            var socket = new WebSocket("ws://{{wsurl}}");
+            var socket = new WebSocket("{{wsurl}}");
             socket.onopen = function () {
                 console.log('WebSocket open');//成功连接上Websocket
             };
@@ -33,30 +33,11 @@
             if (socket.readyState == WebSocket.OPEN) socket.onopen();
             window.s = socket;
         };
-        $('#send_message').click(function () {
-            //如果未连接到websocket
-            if (!window.s) {
-                alert("websocket未连接.");
-            } else {
-                window.s.send($('#message').val());//通过websocket发送数据
-            }
-        });
-        $('#close_websocket').click(function () {
-            if (window.s) {
-                window.s.close();//关闭websocket
-                console.log('websocket已关闭');
-            }
-        });
 
     });
-    //]]></script>
+</script>
 
 <h5>{{name}}@{{server_ip}}</h5>
-
-<button type="button" class="btn btn-default btn-sm" id="connect_websocket">start</button>
-<button type="button" class="btn btn-default btn-sm" id="close_websocket">stop</button>
-<button type="button" class="btn btn-default btn-sm" id="close_websocket">refresh</button>
-
 
 <div class="panel panel-default">
   	<div class="panel-body">
